FlowDemo/src/main/java/com/example/flowdemo/model/transpiler/antlr/FlowGrammarParser.java
// Generated from java-escape by ANTLR 4.11.1
package com.example.flowdemo.model.transpiler.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FlowGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, Comment=2, Assign=3, While=4, For=5, If=6, Else=7, Output=8, Return=9, 
		IntType=10, CharType=11, BoolType=12, VoidType=13, LParen=14, RParen=15, 
		Comma=16, LBrace=17, RBrace=18, Semicolon=19, Plus=20, Sub=21, Div=22, 
		Mult=23, Mod=24, Less=25, LessEq=26, Grtr=27, GrtrEq=28, Eq=29, And=30, 
		Or=31, Xor=32, Not=33, Idfr=34, ComponentId=35, CharLit=36, IntLit=37, 
		BoolLit=38;
	public static final int
		RULE_prog = 0, RULE_decl = 1, RULE_block = 2, RULE_stmt = 3, RULE_expr = 4, 
		RULE_op = 5, RULE_mod = 6, RULE_type = 7, RULE_signature = 8;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "decl", "block", "stmt", "expr", "op", "mod", "type", "signature"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'='", "'while'", "'for'", "'if'", "'else'", "'output'", 
			"'return'", "'int'", "'char'", "'bool'", "'void'", "'('", "')'", "','", 
			"'{'", "'}'", "';'", "'+'", "'-'", "'/'", "'*'", "'%'", "'<'", "'<='", 
			"'>'", "'>='", "'EQUALS'", "'AND'", "'OR'", "'XOR'", "'NOT'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "Comment", "Assign", "While", "For", "If", "Else", "Output", 
			"Return", "IntType", "CharType", "BoolType", "VoidType", "LParen", "RParen", 
			"Comma", "LBrace", "RBrace", "Semicolon", "Plus", "Sub", "Div", "Mult", 
			"Mod", "Less", "LessEq", "Grtr", "GrtrEq", "Eq", "And", "Or", "Xor", 
			"Not", "Idfr", "ComponentId", "CharLit", "IntLit", "BoolLit"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FlowGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public DeclContext decl;
		public List<DeclContext> funclist = new ArrayList<DeclContext>();
		public TerminalNode EOF() { return getToken(FlowGrammarParser.EOF, 0); }
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlowGrammarVisitor ) return ((FlowGrammarVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(21);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 15360L) != 0) {
				{
				{
				setState(18);
				((ProgContext)_localctx).decl = decl();
				((ProgContext)_localctx).funclist.add(((ProgContext)_localctx).decl);
				}
				}
				setState(23);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(24);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclContext extends ParserRuleContext {
		public SignatureContext signature;
		public List<SignatureContext> params = new ArrayList<SignatureContext>();
		public List<SignatureContext> signature() {
			return getRuleContexts(SignatureContext.class);
		}
		public SignatureContext signature(int i) {
			return getRuleContext(SignatureContext.class,i);
		}
		public TerminalNode LParen() { return getToken(FlowGrammarParser.LParen, 0); }
		public TerminalNode RParen() { return getToken(FlowGrammarParser.RParen, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<TerminalNode> Comma() { return getTokens(FlowGrammarParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(FlowGrammarParser.Comma, i);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).exitDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlowGrammarVisitor ) return ((FlowGrammarVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			signature();
			setState(27);
			match(LParen);
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((_la) & ~0x3f) == 0 && ((1L << _la) & 15360L) != 0) {
				{
				setState(28);
				((DeclContext)_localctx).signature = signature();
				((DeclContext)_localctx).params.add(((DeclContext)_localctx).signature);
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Comma) {
					{
					{
					setState(29);
					match(Comma);
					setState(30);
					((DeclContext)_localctx).signature = signature();
					((DeclContext)_localctx).params.add(((DeclContext)_localctx).signature);
					}
					}
					setState(35);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(38);
			match(RParen);
			setState(39);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public StmtContext stmt;
		public List<StmtContext> stmtlist = new ArrayList<StmtContext>();
		public TerminalNode LBrace() { return getToken(FlowGrammarParser.LBrace, 0); }
		public TerminalNode RBrace() { return getToken(FlowGrammarParser.RBrace, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlowGrammarVisitor ) return ((FlowGrammarVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(LBrace);
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ComponentId) {
				{
				{
				setState(42);
				((BlockContext)_localctx).stmt = stmt();
				((BlockContext)_localctx).stmtlist.add(((BlockContext)_localctx).stmt);
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48);
			match(RBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	 
		public StmtContext() { }
		public void copyFrom(StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfStmtContext extends StmtContext {
		public TerminalNode ComponentId() { return getToken(FlowGrammarParser.ComponentId, 0); }
		public TerminalNode If() { return getToken(FlowGrammarParser.If, 0); }
		public TerminalNode LParen() { return getToken(FlowGrammarParser.LParen, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RParen() { return getToken(FlowGrammarParser.RParen, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode Else() { return getToken(FlowGrammarParser.Else, 0); }
		public IfStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).enterIfStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).exitIfStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlowGrammarVisitor ) return ((FlowGrammarVisitor<? extends T>)visitor).visitIfStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class WhileStmtContext extends StmtContext {
		public TerminalNode ComponentId() { return getToken(FlowGrammarParser.ComponentId, 0); }
		public TerminalNode While() { return getToken(FlowGrammarParser.While, 0); }
		public TerminalNode LParen() { return getToken(FlowGrammarParser.LParen, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RParen() { return getToken(FlowGrammarParser.RParen, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).enterWhileStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).exitWhileStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlowGrammarVisitor ) return ((FlowGrammarVisitor<? extends T>)visitor).visitWhileStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssignStmtContext extends StmtContext {
		public TerminalNode ComponentId() { return getToken(FlowGrammarParser.ComponentId, 0); }
		public TerminalNode Idfr() { return getToken(FlowGrammarParser.Idfr, 0); }
		public TerminalNode Assign() { return getToken(FlowGrammarParser.Assign, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(FlowGrammarParser.Semicolon, 0); }
		public AssignStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).enterAssignStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).exitAssignStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlowGrammarVisitor ) return ((FlowGrammarVisitor<? extends T>)visitor).visitAssignStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CallStmtContext extends StmtContext {
		public ExprContext expr;
		public List<ExprContext> params = new ArrayList<ExprContext>();
		public TerminalNode ComponentId() { return getToken(FlowGrammarParser.ComponentId, 0); }
		public TerminalNode Idfr() { return getToken(FlowGrammarParser.Idfr, 0); }
		public TerminalNode LParen() { return getToken(FlowGrammarParser.LParen, 0); }
		public TerminalNode RParen() { return getToken(FlowGrammarParser.RParen, 0); }
		public TerminalNode Semicolon() { return getToken(FlowGrammarParser.Semicolon, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(FlowGrammarParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(FlowGrammarParser.Comma, i);
		}
		public CallStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).enterCallStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).exitCallStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlowGrammarVisitor ) return ((FlowGrammarVisitor<? extends T>)visitor).visitCallStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclAssignStmtContext extends StmtContext {
		public TerminalNode ComponentId() { return getToken(FlowGrammarParser.ComponentId, 0); }
		public SignatureContext signature() {
			return getRuleContext(SignatureContext.class,0);
		}
		public TerminalNode Assign() { return getToken(FlowGrammarParser.Assign, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(FlowGrammarParser.Semicolon, 0); }
		public DeclAssignStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).enterDeclAssignStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).exitDeclAssignStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlowGrammarVisitor ) return ((FlowGrammarVisitor<? extends T>)visitor).visitDeclAssignStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OutputStmtContext extends StmtContext {
		public TerminalNode ComponentId() { return getToken(FlowGrammarParser.ComponentId, 0); }
		public TerminalNode Output() { return getToken(FlowGrammarParser.Output, 0); }
		public TerminalNode LParen() { return getToken(FlowGrammarParser.LParen, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RParen() { return getToken(FlowGrammarParser.RParen, 0); }
		public TerminalNode Semicolon() { return getToken(FlowGrammarParser.Semicolon, 0); }
		public OutputStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).enterOutputStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).exitOutputStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlowGrammarVisitor ) return ((FlowGrammarVisitor<? extends T>)visitor).visitOutputStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ForStmtContext extends StmtContext {
		public TerminalNode ComponentId() { return getToken(FlowGrammarParser.ComponentId, 0); }
		public TerminalNode For() { return getToken(FlowGrammarParser.For, 0); }
		public TerminalNode LParen() { return getToken(FlowGrammarParser.LParen, 0); }
		public SignatureContext signature() {
			return getRuleContext(SignatureContext.class,0);
		}
		public TerminalNode Assign() { return getToken(FlowGrammarParser.Assign, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode Comma() { return getToken(FlowGrammarParser.Comma, 0); }
		public TerminalNode RParen() { return getToken(FlowGrammarParser.RParen, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ForStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).enterForStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).exitForStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlowGrammarVisitor ) return ((FlowGrammarVisitor<? extends T>)visitor).visitForStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ReturnStmtContext extends StmtContext {
		public TerminalNode ComponentId() { return getToken(FlowGrammarParser.ComponentId, 0); }
		public TerminalNode Return() { return getToken(FlowGrammarParser.Return, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).enterReturnStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlowGrammarListener ) ((FlowGrammarListener)listener).exitReturnStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlowGrammarVisitor ) return ((FlowGrammarVisitor<? extends T>)visitor).visitReturnStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stmt);
		int _la;
		try {
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new DeclAssignStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				match(ComponentId);
				setState(51);
				signature();
				setState(52);
				match(Assign);
				setState(53);
				expr();
				setState(54);
				match(Semicolon);
				}
				break;
			case 2:
				_localctx = new AssignStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				match(ComponentId);
				setState(57);
				match(Idfr);
				setState(58);
				match(Assign);
				setState(59);
				expr();
				setState(60);
				match(Semicolon);
				}
				break;
			case 3:
				_localctx = new OutputStmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				match(ComponentId);
				setState(63);
				match(Output);
				setState(64);
				match(LParen);
				setState(65);
				expr();
				setState(66);
				match(RParen);
				setState(67);
				match(Semicolon);
				}
				break;
			case 4:
				_localctx = new CallStmtContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				match(ComponentId);
				setState(70);
				match(Idfr);
				setState(71);
				match(LParen);
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ComponentId) {
					{
					setState(72);
					((CallStmtContext)_localctx).expr = expr();
					((CallStmtContext)_localctx).params.add(((CallStmtContext)_localctx).expr);
					setState(77);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==Comma) {
						{
						{
						setState(73);
						match(Comma);
						setState(74);
						((CallStmtContext)_localctx).expr = expr();
						((CallStmtContext)_localctx).params.add(((CallStmtContext)_localctx).expr);
						}
						}
						setState(79);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(82);
				match(RParen);
				setState(83);
				match(Semicolon);
				}
				break;
			case 5:
				_localctx = new ForStmtContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(84);
				match(ComponentId);
				setState(85);
				match(For);
				setState(86);
				match(LParen);
				setState(87);
				signature();
				setState(88);
				match(Assign);
				setState(89);
				expr();
				setState(90);
				match(Comma);
				setState(91);
				expr();
				setState(92);
				match(RParen);
				setState(93);
				block();
				}
				break;
			case 6:
				_localctx = new WhileStmtContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(95);
				match(ComponentId);
				setState(96);
				match(While);
				setState(97);
				match(LParen);
				setState(98);
				expr();
				setState(99);
				match(RParen);
				setState(100);
				block();
				}
				break;
			case 7:
				_localctx = new IfStmtContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(102);
				match(ComponentId);
				setState(103);
				match(If);
				setState(104);
				match(LParen);
				setState(105);
				expr();
				setState(106);
				match(RParen);
				setState(107);
				block();
				setState(108);
				match(Else);
				setState(109);
				block();
				}
				break;
			case 8:
				_localctx = new ReturnStmtContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(111);
				match(ComponentId);
				setState(112);
				match(Return);
				setState(113);
				expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
